--- a/Assainment.css
+++ b/Assainment.css
@@ -63,7 +63,7 @@ header {
     margin-bottom: 16px;
 }
 .action-desc p{
-    color: #252432;
+    color:#252432;
     margin-bottom: 16px;
 }
 .part3{
@@ -88,9 +88,23 @@ header {
     color: blue;
 }
 .b3{
-    color: #252432;
+    color: #706f80;
+    
 }
-
+.part5{
+    text-align: center;
+}
+.p5d1{
+    margin-top: 75px;
+    margin-bottom: 20px;
+}
+.p5d1 h1{
+    margin-bottom: 20px;
+    font-size: 50px;
+}
+.p5d1 p{
+    margin-bottom: 20px;
+}
 
 
 .av {
