--- a/Assainment.css
+++ b/Assainment.css
@@ -91,6 +91,32 @@ header {
     color: #706f80;
     
 }
+.part4{
+    text-align: center;
+    margin-bottom: 40   px;
+    
+}
+.Reviewer-container{
+    display: flex;
+    text-align: center;
+    margin: 0 20%;
+}
+.part4 h1{
+    margin-bottom: 50px;
+    font-size: 40px;
+}
+.desiner{
+    margin-top: 16px;
+    margin-bottom: 16px;
+}
+.R-img{
+    display: flex;
+    margin-top: 16px;
+}
+.R-img img{
+    border-radius: 50%;
+}
+
 .part5{
     text-align: center;
 }
